Update and rename 2009-10-01-paper-title-number-1.md to 2025-05-15_NP.md

--- a/_publications/2025-05-15_NP.md
+++ b/_publications/2025-05-15_NP.md
@@ -5,7 +5,7 @@ category: manuscripts
 permalink: /publication/2025-05-15
 excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2009-10-01
-venue: 'Nature Protocols'
+venue: '<strong><em>Nature Protocols</em></strong>'
 slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
 paperurl: 'http://academicpages.github.io/files/paper1.pdf'
 bibtexurl: 'http://academicpages.github.io/files/bibtex1.bib'
